# GenRecSys

./: .dockerignore  .dvcignore  .env.example  .gitignore  Makefile  README.md  dvc.yaml  params_rivaldo.yaml.bak  pyproject.toml  sitecustomize.py
.agents/: AGENTS.md
.agents/skills/experiment-audit/: SKILL.md
.agents/skills/model-engineering/: SKILL.md
.claude/: CLAUDE.md  review.md
.claude/skills/experiment-audit/: SKILL.md  config.json
.claude/skills/grounded-recommendation-reliability/: SKILL.md
.claude/skills/model-engineering/: SKILL.md  config.json
.claude/skills/stat-interpretation/: SKILL.md  config.json
.github/workflows/: claude-review.yml  codex-review.yml
configs/: acquire_amazon_beauty.yaml  acquire_amazon_electronics.yaml  acquire_amazon_sports.yaml  acquire_movielens25m.yaml  acquire_yelp.yaml  dataset_amazon_beauty.yaml  dataset_amazon_electronics.yaml  dataset_amazon_sports.yaml  dataset_movielens25m.yaml  dataset_yambda.yaml  dataset_yelp.yaml  itemknn_yambda.yaml  mf_yambda.yaml  sasrec_yambda.yaml  torchrec_yambda.yaml
data/: .gitignore
data/analytics/: .gitignore
docker/: app.Dockerfile  docker-compose.yml
docs/: README.md  mkdocs.yml
docs/docs/: architecture.md  datasets.md  index.md
notebooks/: movielens25m_profile.ipynb  yambda_profile.ipynb
scripts/: bootstrap_sample_data.py
src/recsys_gen/: __init__.py  config.py
src/recsys_gen/data/: __init__.py  acquisition.py  (+4 more)
tests/: test_acquisition.py  test_config_surface.py  test_dataset.py  test_metrics.py  test_models.py  test_retrieval.py  test_sequences.py
(+24 files in other folders)
